# konCePCja

./: .clang-tidy  .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HISTORY.txt  INSTALL.md  KAPRYs.md  KONCEPCJA.md  LESSONS.md  LICENSE.md  NOTICE.md  README.md  RELEASING.md  SERIAL.COM  compile_commands.json  default.nix  doxygen.cfg  koncepcja.cfg  koncepcja.cfg.tmpl  main.cpp  makefile  plotter.dsk  release-please-config.json  vcpkg.json
.github/workflows/: check-notarization.yml  coverage.yml  linux.yml  macos.yml  msvc.yml  pages.yml  pr-title-lint.yml  release-please.yml  shader-blobs.yml  windows.yml
debian/: menu
doc/: man.html
doc/man6/: koncepcja.6
docs/: board-performance.md  core-refactor-roadmap.md  hw-spec.md  ipc-protocol.md  peripheral-audit.md  replacement-ledger.md
docs/hardware/: amdrum-device.md  amx-mouse-device.md  asic-device.md  crtc-device.md  crtc.md  drive-sound-corpus-plan.md  fdc-device.md  floppy-disc-system.md  flux-formats-feasibility.md  flux-ingestion-contract.md  flux-media.md  gate-array-device.md  gate-array.md  gw-protocol-notes.md  hfe-format.md  ipf-decoder-cleanroom-research.md  ipf-decoder-contract.md  ipf-format.md  kryoflux-stream-format.md  light-gun-device.md  m4-board.md  m4-device.md  memory-device.md  multiface-device.md  plotter-device.md  ppi-device.md  printer-device.md  probe-device.md  psg-device.md  rs232-device.md  silicon-disc-device.md  smartwatch-device.md  symbiface-device.md  tape-device.md  tape-remote-cable.md  usb-fdd-bridge-plan.md  v9990.md  video-device.md  z80.md
docs/perf/: 2026-07-07-dual-path-pgo-fps.md
docs/plans/: 2026-06-21-001-refactor-decouple-emulation-render-plan.md  2026-06-30-cycle-exact-machine.md  2026-06-30-z80-cleanroom-core.md  2026-07-05-001-two-mode-simulation-architecture.md  2026-07-09-001-feat-runtier-fast-plan.md  2026-07-13-001-feat-gate-c-cutover-plan.md
docs/state-representations/: README.md  logic-analyzer-view.md  motherboard-dataflow.md  spatial-beam-memory.md  state-machine-atlas.md
manual/: .gitignore  Makefile  OUTLINE.md  README.md  TYPOGRAPHY.md  i18n.typ  manual_build.typ  template.typ
manual/chapters/: appendix_a_keys.typ  appendix_b_ipc.typ  appendix_c_config.typ  appendix_d_formats.typ  appendix_e_hardware.typ  appendix_f_glossary.typ  appendix_g_index.typ  ch01_getting_started.typ  ch02_interface.typ  ch03_media.typ  ch04_configuration.typ  ch05_hardware.typ  ch06_peripherals.typ  ch07_devtools.typ  ch08_assembler.typ  ch09_ipc.typ  ch10_telnet.typ  ch11_m4.typ  ch12_recording.typ  front_matter.typ
manual/fonts/: LICENSES.md
manual/tools/: gen_keyboard.py  gen_memory_map.py  gen_palette.py  gen_screen_modes.py  gen_topology.py
manual/web/: index.html  style.css
resources/: Info.plist  keymap_de_linux.map  keymap_de_win.map  keymap_es_linux.map  keymap_es_win.map  keymap_fr_linux.map  keymap_fr_win.map  keymap_uk_linux.map  keymap_uk_win.map  keymap_us.map  koncepcja.icns
resources/drive-sounds/: README-motor.md  README-stepper.md
resources/freedesktop/: koncepcja.desktop
rom/: ROM-LICENSE.txt  serial.rom
scripts/: apply-sdl-patches.sh  blob_to_header.py  build-macos.sh  build-sdl.sh  compile_shaders.sh  dsk_add_file.py  fetch-z80-sst.sh  update-sdl.sh
sim/: bench_fps.cpp  koncepcja_sim.cpp
src/: LanguageDefinitions.cpp  TextEditor.cpp  TextEditor.h  amdrum.cpp  amdrum.h  amx_mouse.cpp  amx_mouse.h  argparse.cpp  argparse.h  asic.cpp  asic.h  asic_debug.cpp  asic_debug.h  autotype.cpp  autotype.h  avi_recorder.cpp  avi_recorder.h  cap32.cpp  cap32.h  cartridge.cpp  cartridge.h  command_palette.cpp  command_palette.h  config_profile.cpp  config_profile.h  configuration.cpp  configuration.h  cpc_key_tables.h  cpc_machine.h  crtc.cpp  crtc.h  crtc_types.cpp  crtc_types.h  data_areas.cpp  data_areas.h  debug_timers.cpp  debug_timers.h  devtools.cpp  devtools.h  devtools_ui.cpp  (+165 more)
src/compat/: getopt.c  getopt.h  msvc_compat.h
src/hw/: a2r.cpp  a2r.h  amdrum.cpp  amdrum.h  amx.cpp  amx.h  asic.cpp  asic.h  board.cpp  board.h  buses.h  crtc.cpp  crtc.h  device.h  fdc.cpp  fdc.h  flux.cpp  flux.h  gate_array.cpp  gate_array.h  light_gun.cpp  light_gun.h  m4.cpp  m4.h  memory.cpp  memory.h  mf2.cpp  mf2.h  pins.h  plotter_hp7470a.cpp  plotter_hp7470a.h  ppi.cpp  ppi.h  printer.cpp  printer.h  probe.cpp  probe.h  psg.cpp  psg.h  rs232.cpp  (+11 more)
src/scalers/: cpc_scalers.cpp  cpc_scalers.h
src/shaders/: blit.frag.glsl  blit.frag.hlsl  blit.msl  blit.vert.glsl  blit.vert.hlsl  blit_dxbc_blobs.h  blit_shaders.h  blit_spirv_blobs.h  crt_basic.frag.glsl  crt_basic.frag.hlsl  crt_basic.msl  crt_dxbc_blobs.h  crt_full.frag.glsl  crt_full.frag.hlsl  crt_spirv_blobs.h  (+2 more)
test/: CapriceDevTools.cpp  CapriceLoadSave.cpp  InputMapper.cpp  amx_mouse.cpp  argparse.cpp  asic.cpp  asic_debug.cpp  asic_viewer.cpp  autotype.cpp  avi_recorder.cpp  cartridge.cpp  command_palette.cpp  config_profile.cpp  configuration.cpp  crtc.cpp  crtc_types.cpp  data_areas.cpp  devtools_ui.cpp  disasm_export.cpp  disk.cpp  disk_file_editor.cpp  disk_format.cpp  disk_sector_editor.cpp  drive_sounds_test.cpp  drive_status.cpp  fdc_test.cpp  fileutils.cpp  flux_encode_util.h  flux_ingest_test.cpp  flux_save_test.cpp  gfx_finder.cpp  gif_recorder.cpp  green_palette.cpp  hfe_test.cpp  hfe_write_test.cpp  imgui_ui.cpp  io_dispatch.cpp  ipc_server.cpp  ipf_decode_test.cpp  iui_host_test.cpp  (+43 more)
test_tapes/: oversized-length.cdt  truncated-custom.cdt  truncated-header.cdt  truncated-length.cdt  truncated-puredata.cdt  truncated-turbo.cdt  truncated-unknown.cdt  valid-minimal.cdt
todos/: 001-pending-p1-tzx-buffer-overread.md  002-pending-p2-string-allocations-render-loop.md  003-pending-p2-tape-block-linear-search.md  004-pending-p2-memory-display-duplication.md  005-pending-p2-poke-ui-duplication.md  006-pending-p2-strtol-validation.md  007-pending-p2-long-topbar-function.md  008-pending-p3-remove-unused-waveform-modes.md  009-pending-p3-remove-placeholder-charset-tab.md  010-pending-p3-waveform-addpolyline.md
tools/: check_notarization.sh  sign_and_notarize.sh
(+187 files in other folders)
